--- a/b.html
+++ b/b.html
@@ -3,14 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="google-adsense-account" content="ca-pub-1676187121456537">
   <title>我的网站</title>
 
   <!-- Google AdSense 自动广告代码（只需加一次） -->
-  <script 
-    async 
-    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1676187121456537"
-    crossorigin="anonymous">
-  </script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1676187121456537"
+     crossorigin="anonymous"></script>
 
   <style>
     body {
