--- a/pastemagicprivacy.html
+++ b/pastemagicprivacy.html
@@ -51,10 +51,10 @@
   </style>
 </head>
 <body>
-  <h1>ModuKit - Developer Toolkit 隐私政策</h1>
+  <h1>PasteMagic – Smart Dev Parser 隐私政策</h1>
   <p><strong>生效日期：2026年2月7日</strong></p>
 
-  <p>感谢您使用 <strong>ModuKit - Developer Toolkit</strong>（以下简称“本扩展”）。我们尊重并保护您的隐私。本隐私政策旨在清晰说明本扩展如何收集、使用、存储或传输您的信息。</p>
+  <p>感谢您使用 <strong>PasteMagic – Smart Dev Parser</strong>（以下简称“本扩展”）。我们尊重并保护您的隐私。本隐私政策旨在清晰说明本扩展如何收集、使用、存储或传输您的信息。</p>
 
   <h2>1. 本扩展不会收集或存储您的个人身份信息</h2>
   <p>ModuKit 是一款本地运行的开发者工具，<strong>不会主动收集、记录、上传或分享您的任何个人信息</strong>（如姓名、邮箱、账号、浏览历史、设备标识等）。</p>
