--- a/pastemagicprivacy.html
+++ b/pastemagicprivacy.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ModuKit - 隐私政策</title>
+  <title>PasteMagic - 隐私政策</title>
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
@@ -57,7 +57,7 @@
   <p>感谢您使用 <strong>PasteMagic – Smart Dev Parser</strong>（以下简称“本扩展”）。我们尊重并保护您的隐私。本隐私政策旨在清晰说明本扩展如何收集、使用、存储或传输您的信息。</p>
 
   <h2>1. 本扩展不会收集或存储您的个人身份信息</h2>
-  <p>ModuKit 是一款本地运行的开发者工具，<strong>不会主动收集、记录、上传或分享您的任何个人信息</strong>（如姓名、邮箱、账号、浏览历史、设备标识等）。</p>
+  <p>PasteMagic 是一款本地运行的开发者工具，<strong>不会主动收集、记录、上传或分享您的任何个人信息</strong>（如姓名、邮箱、账号、浏览历史、设备标识等）。</p>
 
   <h2>2. 关于网络请求与第三方服务</h2>
   <p>为实现部分功能（如 IP 地址查询、DNS 解析），本扩展会向以下第三方服务发起请求：</p>
@@ -84,7 +84,7 @@
 
   <div class="footer">
     <p>✅ 本扩展已通过最小权限原则设计，仅请求必要权限以实现声明功能。我们承诺：绝不追踪、不广告、不售卖用户数据。</p>
-    <p>&copy; 2026 ModuKit. 保留所有权利。</p>
+    <p>&copy; 2026 PasteMagic. 保留所有权利。</p>
   </div>
 </body>
 </html>
